<resources>
    <string name="app_name">COEN390_AS1</string>
    <string name="settings_txt">SETTINGS</string>
    <string name="show_my_counts_txt">SHOW MY COUNTS</string>
    <string name="counter_1_name_txt">Counter 1 Name</string>
    <string name="write_name_here">Name goes here</string>
    <string name="counter_2_name_txt">Counter 2 Name</string>
    <string name="counter_3_name_txt">Counter 3 Name</string>
    <string name="max_count_txt">Maximum Counts</string>
    <string name="write_max_count_here">Write max count here</string>
    <string name="save_txt">Save</string>
    <string name="max_count">maxCount</string>
    <string name="action_edit">Edit</string>
    <string name="settings_activity">Settings Activity</string>
    <string name="total_count">Total Count: %1$d</string>
    <string name="toggle_event_names">Toggle Event Names</string>
    <string name="data_activity">Data Activity</string>
    <string name="total_events">Total events: %1$d events</string>
    <string name="counter_1_txt">Counter 1</string>
    <string name="counter_2_txt">Counter 2</string>
    <string name="counter_3_txt">Counter 3</string>
    <string name="counter_1">%1$s: %2$d events</string>
    <string name="counter_2">%1$s: %2$d events</string>
    <string name="counter_3">%1$s: %2$d events</string>
    <string name="counter_1_value">counter1Value</string>
    <string name="counter_2_value">counter2Value</string>
    <string name="counter_3_value">counter3Value</string>
    <string name="counter_1_name">counter1Name</string>
    <string name="counter_2_name">counter2Name</string>
    <string name="counter_3_name">counter3Name</string>
</resources>