<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Views.MainActivity">

    <!-- Settings button -->
    <Button
        android:id="@+id/settings_btn"
        android:layout_gravity="top|center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:text="@string/settings_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="0dp"
        android:background="#144557"/>

    <!-- Counter 1 button -->
    <Button
        android:id="@+id/counter1_btn"
        android:layout_gravity="center"
        android:text="@string/counter_1_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cornerRadius="0dp"/>

    <!-- Counter 2 button -->
    <Button
        android:id="@+id/counter2_btn"
        android:layout_gravity="center"
        android:text="@string/counter_2_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cornerRadius="0dp"/>

    <!-- Counter 3 button -->
    <Button
        android:id="@+id/counter3_btn"
        android:layout_gravity="center"
        android:text="@string/counter_3_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="0dp"/>

    <!-- Total count display -->
    <TextView
        android:id="@+id/totalcountview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="75dp"
        android:text="@string/total_count"
        android:textSize="24sp" />

    <!-- Show my counts button -->
    <Button
        android:id="@+id/showmycounts_btn"
        android:layout_gravity="center"
        android:text="@string/show_my_counts_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="0dp" />

</LinearLayout>